Format Data Cleaning Notebook
- Added table of contents and hyperlinks.

--- a/phase-1/data_cleaning.ipynb
+++ b/phase-1/data_cleaning.ipynb
@@ -20,6 +20,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e8d7280-589e-4d9f-87eb-eb7f32e5b652",
+   "metadata": {},
+   "source": [
+    "## Contents\n",
+    "- [Import Packages and Load Data](#Import-Packages-and-Load-Data)\n",
+    "- [Line Productivity](#Line-Productivity)\n",
+    "- [Products](#Products)\n",
+    "- [Products Details](#Products-Details)\n",
+    "- [Downtime Factors](#Downtime-Factors)\n",
+    "- [Line Downtime](#Line-Downtime)\n",
+    "- [Calendar](#Calendar)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5d918591-8cf5-489b-b4d8-a396d485aed4",
    "metadata": {},
    "source": [
